membuat bagian navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,42 @@
   </head>
   <body>
     <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow-lg w-100"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png" alt="images" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="#">Product</a>
+            <a class="nav-link active" href="#">Location</a>
+            <a class="nav-link active" href="#">FAQ</a>
+            <a
+              class="nav-link active text-dark rounded text-center"
+              href=""
+              target="_blank"
+              style="background-color: #cdb988"
+              >🛒Order Now</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
     <!-- End Navbar -->
 
     <!-- Carousel -->
