menambahkan id target dar kelas nav link

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link active" href="#">About</a>
-            <a class="nav-link active" href="#">Product</a>
-            <a class="nav-link active" href="#">Location</a>
-            <a class="nav-link active" href="#">FAQ</a>
+            <a class="nav-link active" href="#about">About</a>
+            <a class="nav-link active" href="#produk">Product</a>
+            <a class="nav-link active" href="#location">Location</a>
+            <a class="nav-link active" href="#faq">FAQ</a>
             <a
               class="nav-link active text-dark rounded text-center"
-              href=""
+              href="https://wa.link/ga984e"
               target="_blank"
               style="background-color: #cdb988"
               >🛒Order Now</a
