menambahkan gambar pada carousel card

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="" class="d-block w-100" />
+          <img src="img/banner1.png" class="d-block w-100" />
         </div>
         <div class="carousel-item">
-          <img src="" class="d-block w-100" />
+          <img src="img/banner2.png" class="d-block w-100" />
         </div>
         <div class="carousel-item">
-          <img src="" class="d-block w-100" />
+          <img src="img/banner3.png" class="d-block w-100" />
         </div>
       </div>
       <button
