membuat section layanan kami

--- a/index.html
+++ b/index.html
@@ -96,9 +96,55 @@
     <!-- End Carousel -->
 
     <!-- Layanan -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center mt-5">
+            <h2 style="font-weight: bold; margin-top: 50px">Pelayanan Kami</h2>
+            <span class="sub-title">
+              Kualitas Produk Adalah Prioritas Kami, Dan Selalu Menjamin
+              <br />Halal Dan Keamanan Hingga Sampai Di Tangan Anda.</span
+            >
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-4 text-center mt-3">
+            <div class="layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img src="img/about-1.png" width="50px" height="auto" alt="" />
+              </div>
+              <h3 class="mt-4" style="font-weight: bold">Mudah di Pesan</h3>
+              <p class="mt-3">Anda hanya memesan <br />melalui website</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 text-center mt-3">
+            <div class="layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img src="img/about-2.png" width="50px" height="auto" alt="" />
+              </div>
+              <h3 class="mt-4" style="font-weight: bold">Bersih dan Halal</h3>
+              <p class="mt-3">Kualitas produk <br />adalah prioritas kami</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 text-center mt-3">
+            <div class="layanan">
+              <div class="circle-icon position-relative mx-auto">
+                <img src="img/about-3.png" alt="" width="50px" height="auto" />
+              </div>
+              <h3 class="mt-4" style="font-weight: bold">Kualitas Terbaik</h3>
+              <p class="mt-3">Kualitas makanan <br />terbaik untuk anda</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Layanan -->
 
     <!-- Produk -->
+
     <!-- End Produk -->
 
     <!-- Modal -->
