membuat section produk yang kami jual

--- a/index.html
+++ b/index.html
@@ -144,7 +144,119 @@
     <!-- End Layanan -->
 
     <!-- Produk -->
-
+    <section id="produk">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col mt-5">
+            <h2 style="font-weight: bold; margin-top: 50px">Aneka Jajanan</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-1.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Risoles</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-2.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Dadar Gulung</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-3.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Wajik</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-4.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Lemper</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-5.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Pastel</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 mb-3">
+            <div class="card shadow">
+              <img src="img/produk-6.png" class="card-img-top" alt="about1" />
+              <div class="card-body d-flex justify-content-between">
+                <h5 class="card-title">Arem-Arem</h5>
+                <h5 class="card-title">12K</h5>
+              </div>
+              <div class="text-center mb-2" style="margin-top: -10px">
+                <button
+                  class="btn btn-sm rounded"
+                  style="background-color: #cdb988; font-weight: bold"
+                >
+                  Cek Detail
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Produk -->
 
     <!-- Modal -->
