--- a/index.html
+++ b/index.html
@@ -263,6 +263,24 @@
     <!-- Modal End -->
 
     <!-- Location -->
+    <section id="location">
+      <div class="container">
+        <div class="row text-center mt-5">
+          <div class="col">
+            <h2 style="font-weight: bold; margin-top: 100px;">Map Lokasi</h2>
+          </div>
+        </div>
+    
+        <div class="row">
+          <div class="col">
+            </div>
+          </div>
+          <div class="col">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.9839160329857!2d107.59486667464789!3d-6.892526793106605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e660ac99d8ff%3A0xb75346d5a9f9f2cb!2sJl.%20Sukajadi%20No.80%2C%20Cipedes%2C%20Kec.%20Sukajadi%2C%20Kota%20Bandung%2C%20Jawa%20Barat%2040162!5e0!3m2!1sen!2sid!4v1695190336671!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Location -->
 
     <!-- FAQ -->
