--- a/index.html
+++ b/index.html
@@ -284,6 +284,120 @@
     <!-- End Location -->
 
     <!-- FAQ -->
+    <section id="faq">
+      <div class="row text-center mt-5">
+        <div class="col">
+          <h2 style="font-weight: bold; margin-top: 50px">Anda punya pertanyaan?</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="accordion container" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="false"
+                  aria-controls="collapseOne">
+                Apa itu website Jajanan Pasar?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Website Jajanan Pasar adalah platform online yang menyediakan informasi tentang berbagai jajanan tradisional dan makanan khas pasar dari berbagai daerah.
+                </div>
+              </div>
+            </div>
+      
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo">
+                Bagaimana cara menggunakan website ini?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Anda dapat menjelajahi berbagai jajanan pasar dengan mengakses kategori dan pencarian produk. Selain itu, Anda dapat membaca ulasan, melihat foto-foto produk, dan melakukan pemesanan jika tersedia.
+                </div>
+              </div>
+            </div>
+            
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree">
+                Bagaimana cara untuk membeli ?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="#accordionExample">
+                <div class="accordion-body">
+                  Proses pemesanan berbeda tergantung pada penjualnya. Pada website ini tersedia button di pojok atas <strong>Kanan</strong> untuk anda menghubungi kami jika ingin membeli jajanan yang tersedia.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour">
+                  Apakah jajanan ini dijamin keamanannya?
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Kami mendorong penjual untuk mematuhi standar kebersihan dan keamanan makanan yang berlaku. Namun, pengguna harus selalu berhati-hati dan memastikan untuk memeriksa keamanan produk yang mereka pesan.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFive"
+                  aria-expanded="false"
+                  aria-controls="collapseFive">
+                  Apakah ada opsi pengiriman produk?
+                </button>
+              </h2>
+              <div
+                id="collapseFive"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Opsi pengiriman mungkin tersedia tergantung pada penjualnya. Anda dapat menghubungi <strong>Owner/ Penjual</strong> untuk membahas mengenai menentukan opsi pengiriman jajanan anda.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End FAQ -->
 
     <!-- Kontak -->
