--- a/index.html
+++ b/index.html
@@ -439,6 +439,77 @@
     <!-- End Kontak -->
 
     <!-- Testimoni -->
+    <section id="review">
+      <div class="container">
+        <div class="row text-center mt-5">
+          <div class="col">
+            <h2 style="font-weight: bold; margin-top: 20px;">Testimoni</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            </div>
+          </div>
+          <div class="col">
+            <div class="container">
+              <div class="row">
+                <div class="col mb-5">
+                  <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+                        <img src="img/orang3.jpeg" alt="images" width="50px" style="border-radius: 50%;">
+                      </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+                        <img src="img/orang1.jpeg" alt="images" width="50px" style="border-radius: 50%;">
+                      </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">
+                        <img src="img/orang2.jpeg" alt="images" width="50px" style="border-radius: 50%;">
+                      </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="contact-tab1" data-bs-toggle="tab" data-bs-target="#home1" type="button" role="tab" aria-controls="contact" aria-selected="false">
+                        <img src="img/orang4.jpg" alt="images" width="50px" style="border-radius: 50%;">
+                      </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="home-tab3" data-bs-toggle="tab" data-bs-target="#home2" type="button" role="tab" aria-controls="contact" aria-selected="false">
+                        <img src="img/orang5.jpg" alt="images" width="50px" style="border-radius: 50%;">
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                      <p class="star text-center">⭐⭐⭐⭐⭐</p>
+                      <p class="reviewer text-center">Enak Bangetttt !!</p>
+                    </div>
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                      <p class="star text-center">⭐⭐⭐⭐</p>
+                      <p class="reviewer text-center">Pelayanannya sangat ramah !!</p>
+                    </div>
+                    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                      <p class="star text-center">⭐⭐⭐⭐⭐</p>
+                      <p class="reviewer text-center">Sangat direkomendasikan makanannya !!</p>
+                    </div>
+                    <div class="tab-pane fade" id="home1" role="tabpanel" aria-labelledby="home-tab1">
+                      <p class="star text-center">⭐⭐⭐⭐</p>
+                      <p class="reviewer text-center">Nyesel sih kalo gak beli, makanannya enak bangett !!</p>
+                    </div>
+                    <div class="tab-pane fade" id="home2" role="tabpanel" aria-labelledby="home-tab2">
+                      <p class="star text-center">⭐⭐⭐⭐</p>
+                      <p class="reviewer text-center">Makanannya enak banget, semoga bisa ditambah varian jenis makanannya</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- End Testimoni -->
 
     <!-- Footer -->
