--- a/index.html
+++ b/index.html
@@ -513,6 +513,34 @@
     <!-- End Testimoni -->
 
     <!-- Footer -->
+    <footer>
+      <div class="container-fluid mt-3">
+        <div class="container-fluid" style="width: 100%; background-color: #cdb988;">
+          <div class="row">
+            <div
+              class="col-md text-center"
+            >
+              <h1 class="mt-4 text-dark fs-5">Follow Us</h1>
+              <a href="#"
+                ><img src="img/instagram.png" width="30px" alt=""
+              /></a>
+              <a href="#"
+                ><img src="img/facebook.png" width="30px" alt=""
+              /></a>
+              <a href="#"
+                ><img src="img/twitter.png" width="30px" alt=""
+              /></a>
+            </div>
+          </div>
+  
+          <div class="row">
+            <div class="col-12 text-center">
+              <p class="text-dark mt-3" style="font-size: 10px; font-weight: 700;">@Copyright 2023 Jajanan Pasar .All Rights Reserved</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- End Footer -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
