menambahkan modal risol, dadar gulung, wajik.

--- a/index.html
+++ b/index.html
@@ -543,6 +543,103 @@
       </div>
     </footer>
     <!-- End Footer -->
+
+    <!-- Popup Modal Produk-->
+  <section id="risoles">
+    <div
+    class="modal fade"
+    id="risolesmodal"
+    tabindex="-1"
+    aria-labelledby="risolesmodal1"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="risolesmodal1" style="font-weight: bold;">Apa itu Risoles ?</h1>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+              <img src="img/produk-1.png" alt="images" style="width: 100%;"> <br>
+              <p class="text-justify mt-2"><strong>Risoles</strong> merupakan jajanan yang dibalut tepung panir, yang biasanya berisi sayuran. Namun, sekarang ini sudah banyak variasinya, yaitu dengan topping modern seperti keju, mayonaise, smoked beef, dan lain-lain.</p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+
+  <section id="dadargulung">
+    <div
+    class="modal fade"
+    id="dadargulungmodal"
+    tabindex="-1"
+    aria-labelledby="dadargulungmodalLabel"
+    aria-hidden="true"
+  >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="dadargulungmodalLabel" style="font-weight: bold;">Apa itu Dadar Gulung ?</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <img src="img/produk-2.png" alt="Dadar Gulung" style="width: 100%;" />
+          <p class="text-justify mt-2">
+            <strong>Dadar Gulung</strong> merupakan kue basah yang terdiri dari kulit dadar tipis terbuat dari tepung. Kulit ini kemudian diisi dengan parutan kelapa yang telah dicampur dengan gula jawa. Isi kemudian digulung bersama kulit. Kulit dadar gulung biasanya berwarna hijau karena diberi pewarna daun suji.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </section>
+
+  <section id="wajik">
+  <div
+  class="modal fade"
+  id="wajikmodal"
+  tabindex="-1"
+  aria-labelledby="wajikmodalLabel"
+  aria-hidden="true"
+  >
+  <div class="modal-dialog">
+  <div class="modal-content">
+      <div class="modal-header">
+      <h1 class="modal-title fs-5" id="wajikmodalLabel" style="font-weight: bold;">Wajik</h1>
+      <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+      ></button>
+      </div>
+      <div class="modal-body">
+      <div class="container">
+          <img src="img/produk-3.png" alt="Wajik" style="width: 100%;" />
+          <p class="text-justify mt-2">
+          <strong>Wajik</strong> adalah hidangan tradisional khas pernikahan adat Jawa yang terbuat dari bahan dasar beras ketan, santan kelapa, dan gula merah.
+          </p>
+      </div>
+      </div>
+  </div>
+  </div>
+  </div>
+  </section>
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
