menambah modal lemper, pastel, arem

--- a/index.html
+++ b/index.html
@@ -639,6 +639,103 @@
   </div>
   </div>
   </section>
+
+  <section id="lemper">
+    <div
+    class="modal fade"
+    id="lempermodal"
+    tabindex="-1"
+    aria-labelledby="lempermodalLabel"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+        <h1 class="modal-title fs-5" id="lempermodalLabel" style="font-weight: bold;">Apa itu Lemper ?</h1>
+        <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+        ></button>
+        </div>
+        <div class="modal-body">
+        <div class="container">
+            <img src="img/produk-4.png" alt="Lemper" style="width: 100%;" />
+            <p class="text-justify mt-2">
+            <strong>Lemper</strong> terbuat dari beras ketan yang digiling halus dan kemudian dibentuk menjadi lembaran tipis, diisi dengan daging ayam cincang atau ikan, serta dibungkus dalam daun pisang sebelum dikukus.
+            </p>
+        </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </section>
+
+    <section id="pastel">
+    <div
+    class="modal fade"
+    id="pastelmodal"
+    tabindex="-1"
+    aria-labelledby="pastelmodalLabel"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+        <h1 class="modal-title fs-5" id="pastelmodalLabel" style="font-weight: bold;">Apa itu Pastel ?</h1>
+        <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+        ></button>
+        </div>
+        <div class="modal-body">
+        <div class="container">
+            <img src="img/produk-5.png" alt="Pastel" style="width: 100%;" />
+            <p class="text-justify mt-2">
+            <strong>Pastel</strong> memiliki rasa yang gurih dan renyah. isi dari pastel bisa dibuat beragam. Ada yang isinya sayuran, ada pula yang diisi dengan tambahan telur atau daging. Menyantapnya dengan cabe rawit begitu nikmat.
+            </p>
+        </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </section>
+
+    <section id="arem">
+    <div
+    class="modal fade"
+    id="aremaremmodal"
+    tabindex="-1"
+    aria-labelledby="aremaremmodalLabel"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+        <h1 class="modal-title fs-5" id="aremaremmodalLabel" style="font-weight: bold;">Apa itu Arem-Arem ?</h1>
+        <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+        ></button>
+        </div>
+        <div class="modal-body">
+        <div class="container">
+            <img src="img/produk-6.png" alt="Arem-Arem" style="width: 100%;" />
+            <p class="text-justify mt-2">
+            <strong>Arem-Arem</strong> terbuat dari beras berisi sayuran atau sambal goreng, kemudian dibungkus dengan daun pisang.
+            </p>
+        </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </section>
+  <!-- End Popup Modal Produk -->
   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
