--- a/index.html
+++ b/index.html
@@ -598,36 +598,39 @@
     </section>
     <!-- End Testimoni -->
 
-    <!-- Footer -->
-    <footer>
-      <div class="container-fluid mt-3">
+  <!-- Start Footer -->
+  <footer>
+    <div class="container-fluid mt-4">
         <div class="container-fluid" style="width: 100%; background-color: #cdb988;">
-          <div class="row">
-            <div
-              class="col-md text-center"
-            >
-              <h1 class="mt-4 text-dark fs-5">Follow Us</h1>
-              <a href="#"
-                ><img src="img/instagram.png" width="30px" alt=""
-              /></a>
-              <a href="#"
-                ><img src="img/facebook.png" width="30px" alt=""
-              /></a>
-              <a href="#"
-                ><img src="img/twitter.png" width="30px" alt=""
-              /></a>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <h1 class="mt-4 text-dark fs-5" style="font-weight: bold;">Jajanan Pasar</h1>
+                    <img src="img/logo.png" alt="Logo" width="120px">
+                </div>
+                <div class="col-md-4">
+                    <h1 class="mt-4 text-dark fs-5 text-center" style="font-weight: bold;">Our Location</h1>
+                    <p class="text-center style="font-size: 12px;">Jl. Sukajadi No.80, Cipedes, Kec. Sukajadi, <br>Kota Bandung, Jawa Barat 40162</p>
+                </div>
+                <div class="col-md-4 d-flex flex-column align-items-center">
+                    <h1 class="mt-4 text-dark fs-5 text-center" style="font-weight: bold;">Follow Us</h1>
+                    <div class="d-flex justify-content-center">
+                        <p>
+                          <a href="#" style="margin-right: 10px;"><img src="img/instagram.png" width="30px" alt=""></a>
+                          <a href="#" style="margin-right: 10px;"><img src="img/facebook.png" width="30px" alt=""></a>
+                          <a href="#"><img src="img/twitter.png" width="30px" alt=""></a>
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
-  
-          <div class="row">
-            <div class="col-12 text-center">
-              <p class="text-dark mt-3" style="font-size: 10px; font-weight: 700;">@Copyright 2023 Jajanan Pasar .All Rights Reserved</p>
+            <div class="row">
+                <div class="text-center">
+                    <p class="text-dark" style="font-size: 10px; font-weight: 700;">@Copyright 2023 Jajanan Pasar. All Rights Reserved</p>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
+    </div>
+  </footer>
+  <!-- End Footer -->
 
     <!-- Popup Modal Produk-->
   <section id="risoles">
