menambahkan id target modal dari produk

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
+                  data-bs-target="#risolesmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
@@ -180,6 +182,8 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
+                  data-bs-target="#dadargulungmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
@@ -197,6 +201,7 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-target="#wajikmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
@@ -214,6 +219,8 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
+                  data-bs-target="#pastelmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
@@ -231,6 +238,8 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
+                  data-bs-target="#aremaremmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
