perbaikan bagian target produk

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
                   data-bs-target="#wajikmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
@@ -239,7 +240,7 @@
                 <button
                   class="btn btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#aremaremmodal"
+                  data-bs-target="#pastelmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
@@ -257,6 +258,8 @@
               <div class="text-center mb-2" style="margin-top: -10px">
                 <button
                   class="btn btn-sm rounded"
+                  data-bs-toggle="modal" 
+                  data-bs-target="#aremaremmodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
