update target lemper produk

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <button
                   class="btn btn-sm rounded"
                   data-bs-toggle="modal" 
-                  data-bs-target="#pastelmodal"
+                  data-bs-target="#lempermodal"
                   style="background-color: #cdb988; font-weight: bold"
                 >
                   Cek Detail
