--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navbar -->
@@ -609,6 +613,87 @@
       </div>
     </section>
     <!-- End Testimoni -->
+
+    <!--Our Team Start-->
+   <section id="team">
+    <div class="container">
+   <div class="row text-center">
+       <div class="col mt-5">
+           <h2 style="font-weight: bold; margin-top: 60px">Our Team</h2>
+       </div>
+   </div>
+</div><!-- End -->
+
+
+<div class="container">
+   <div class="row text-center justify-content-center mt-5">
+
+      <!-- Team item -->
+      <div class="col-xl-3 col-sm-6 mb-5">
+       <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/fahri.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
+           <h5 class="mb-0">Fahri</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+           <ul class="social mb-0 list-inline mt-3">
+               <li class="list-inline-item"><a href="https://www.instagram.com/_fahr" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+               <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-github-fill"></i></a></li>
+               <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-instagram-fill"></i></a></li>
+           </ul>
+       </div>
+   </div><!-- End -->
+
+       <!-- Team item -->
+       <div class="col-xl-3 col-sm-6 mb-5">
+           <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/rici.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
+               <h5 class="mb-0">Rici</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <ul class="social mb-0 list-inline mt-3">
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-linkedin-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-github-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-instagram-fill"></i></a></li>
+               </ul>
+           </div>
+       </div><!-- End -->
+
+       <div class="row text-center justify-content-center">
+           <!-- Team item -->
+       <div class="col-xl-3 col-sm-6 mb-5">
+           <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/serly.jpeg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
+               <h5 class="mb-0">Serly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <ul class="social mb-0 list-inline mt-3">
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-linkedin-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-github-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-instagram-fill"></i></a></li>
+               </ul>
+           </div>
+       </div><!-- End -->
+
+       <!-- Team item -->
+       <div class="col-xl-3 col-sm-6 mb-5">
+           <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/bariza.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
+               <h5 class="mb-0">Bariza</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <ul class="social mb-0 list-inline mt-3">
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-linkedin-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-github-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-instagram-fill"></i></a></li>
+               </ul>
+           </div>
+       </div><!-- End -->
+
+        <!-- Team item -->
+       <div class="col-xl-3 col-sm-6 mb-5">
+           <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/ani.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
+               <h5 class="mb-0">Widhiani</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
+               <ul class="social mb-0 list-inline mt-3">
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-linkedin-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-github-fill"></i></a></li>
+                   <li class="list-inline-item"><a href="#" class="social-link"><i class="ri-instagram-fill"></i></a></li>
+               </ul>
+           </div>
+       </div><!-- End -->
+       </div>
+       
+   </div>
+</div>
+    <section/>
+        <!--Our Team End-->
 
   <!-- Start Footer -->
   <footer>
