--- a/index.html
+++ b/index.html
@@ -670,9 +670,9 @@
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/bariza.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0">Bariza</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-instagram-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/bariza-arfadillah-abqariy-230022221/" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/barizaarfadillah" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/bariza_arfadillah/" class="social-link" target="_blank"><i class="ri-instagram-fill"></i></a></li>
                </ul>
            </div>
        </div><!-- End -->
