--- a/index.html
+++ b/index.html
@@ -682,9 +682,9 @@
            <div class="rounded shadow py-5 px-4" style="background-color: wheat;"><img src="img/ani.jpg" alt="" width="100" height="100" class="rounded-circle mb-1 shadow-sm">
                <h5 class="mb-0">Widhiani</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
                <ul class="social mb-0 list-inline mt-3">
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
-                <li class="list-inline-item"><a href="#" class="social-link" target="_blank"><i class="ri-instagram-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/widhiani-luky-kurniasih" class="social-link" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/wilniky" class="social-link" target="_blank"><i class="ri-github-fill"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/widhiani_kurniasih/" class="social-link" target="_blank"><i class="ri-instagram-fill"></i></a></li>
                </ul>
            </div>
        </div><!-- End -->
